--- a/config/web.xml
+++ b/config/web.xml
@@ -5,12 +5,21 @@
   version="2.4">
 
   <servlet>
-    <servlet-name>plainServlet</servlet-name>
+    <servlet-name>simpleServlet</servlet-name>
+    <servlet-class>plainjavaservlet.SimpleServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>servletController</servlet-name>
     <servlet-class>plainjavaservlet.ServletController</servlet-class>
   </servlet>
+  
   <servlet-mapping>
-    <servlet-name>plainServlet</servlet-name>
-    <url-pattern>/plainServlet</url-pattern>
+    <servlet-name>simpleServlet</servlet-name>
+    <url-pattern>/simpleServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>servletController</servlet-name>
+    <url-pattern>/servletController</url-pattern>
   </servlet-mapping>
 
 </web-app>
